gui init with working Main